--- a/datasourceapp/build.gradle
+++ b/datasourceapp/build.gradle
@@ -25,4 +25,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.google.code.gson:gson:2.3.1'
+    //Debug tools
+    debugCompile 'com.facebook.stetho:stetho:1.5.0'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+
 }
