--- a/datasourceapp/src/main/AndroidManifest.xml
+++ b/datasourceapp/src/main/AndroidManifest.xml
@@ -1,11 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
     package="de.suitepad.jyodroid.datasourceapp">
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true" android:theme="@style/AppTheme">
-
+    <application
+        android:name=".DataSourceApp"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <provider
+            android:name=".data.DataSourceContentProvider"
+            android:authorities="de.suitepad.jyodroid.datasourceapp"
+            android:enabled="true"
+            android:exported="true"
+            android:syncable="true" />
     </application>
-
 </manifest>
