Proxy server service

--- a/httpproxyapp/src/main/AndroidManifest.xml
+++ b/httpproxyapp/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+
+        <service android:name=".httpproxy.ProxyService" />
+
     </application>
 
 </manifest>
