--- a/httpproxyapp/build.gradle
+++ b/httpproxyapp/build.gradle
@@ -1,17 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion project.compileSdkVersion.toInteger()
+    buildToolsVersion project.buildToolsVersion
 
     defaultConfig {
-        applicationId "de.suitepad.jyodroid.httpproxyapp"
-        minSdkVersion 19
-        targetSdkVersion 25
+        applicationId "de.suitepad.jyodroid.menuapp"
+        minSdkVersion project.minSdkVersion.toInteger()
+        targetSdkVersion project.targetSdkVersion.toInteger()
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField "int", "PROXY_PORT", project.proxyPort
 
     }
     buildTypes {
